--- a/assets/css/1-base/vars.sass
+++ b/assets/css/1-base/vars.sass
@@ -19,7 +19,9 @@ $font-size-large-4: 4.736rem
 $font-size-large-5: 6.313rem
 
 
-
+//
 //vertical-rhytm
 $base-line-height: 1.4
 $vertical-rhytm: $base-line-height * $font-size-base
+$vertical-rhytm: $base-line-height * $font-size-small
+$vertical-rhytm: $base-line-height * $font-size-small
