--- a/assets/css/3-module/c-article.sass
+++ b/assets/css/3-module/c-article.sass
@@ -1,10 +1,14 @@
 //.varianta
-section,
+// section,
 .c-article,
 .c-article__header,
 .c-article__header--frosting-glass,
 .c-article__header--frosting-glass:after
   overflow: hidden
+
+.c-article__body
+  max-width: 960px
+  margin: 0 auto
 
 .c-article
   margin-bottom: 50vh
@@ -16,55 +20,58 @@ section,
   background-attachment: fixed
   background-size: cover
   margin-bottom: $vertical-rhytm
+  height: 80vh
+  position: relative
 
-.c-article__header
-  height: 85vh
+// .c-article__header
+  height: 80vh
   display: flex
 
 .c-article__header--frosting-glass
-  height: 35vh
+  height: 30vh
   width: 100%
   display: flex
-  flex-wrap: wrap
-  justify-content: center
-  align-content: center
-  margin-top: auto
+  align-items: center
+  position: absolute
+  bottom: 0
+  left: 0
+  // border: $vertical-rhytm/8 solid rgba(white, 0.1)
+  // border-top: $vertical-rhytm/10 solid lighten(darkred, 15%)
+  // margin-top: auto
 
   //1.varianta
   background-color: rgba(white, 0.7)
   // 2.varianta
   background-color: white
-  position: relative
-  z-index: 999
+  // position: relative
+  z-index: 9
   &:after
     background-image: url('images/background/bg-standart.jpeg')
     background-attachment: fixed
     background-size: cover
-    display: block
-    z-index: -1
-    filter: blur(4px)
-    margin: -3px 0 -10px
-    content: ''
+    // display: block
+    // z-index: -1
+    filter: blur(3px)
+    margin: -3px 0 -9px
+    content: ' '
     width: calc(100% + 10px)
     height: calc(100% + 6px)
     // height: 100%
     position: absolute
     top: 0
     left: 0
-    opacity: 0.4
+    opacity: 0.6
   @media(max-width: 600px)
     height: 60vh
 
-.c-article__author,
-.c-article__title
+.c-article__hg
   width: 960px
-  margin: 0 $vertical-rhytm
+  margin: 0 auto
   @media(max-width: 400px)
     margin: 0 $vertical-rhytm/2
 
 .c-article__author
   font-size: $font-size-large-2
-
 
 .c-article__title
   font-size: $font-size-large-4
@@ -74,12 +81,15 @@ section,
 .c-article__title,
 .c-article__author
   position: relative
-  z-index: 999
+  z-index: 99
 
 .c-article__section
   // golden ratio 960 * 0.618
   max-width: 593.28px
-  margin: 0 0 0 42%
+  margin-left: auto
+  @media(max-width: 959px)
+    max-width: 593.28px
+    margin: 0 auto
   @media(max-width: 593.28px)
     padding: 0 $vertical-rhytm
   @media(max-width: 400px)
@@ -93,7 +103,7 @@ section,
     max-width: 593.28px
     margin: 0 auto
 
-.c-article
+.c-article,
 .c-article__container
 
 .c-article__figure
@@ -105,7 +115,7 @@ section,
   padding-top: $vertical-rhytm / 6
   color: $color-text-light
   font-size: $font-size-mini
-  letter-spacing: 0.006em
+  // letter-spacing: 0.006em
   font-family: 'Oswald', sans-serif
 
 .c-article__figcaption
