--- a/assets/css/0-tools/font.sass
+++ b/assets/css/0-tools/font.sass
@@ -6,7 +6,7 @@
 // @import url('https://fonts.googleapis.com/css?family=Prociono')
 
 //sans-serif
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin-ext')
+// @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=latin-ext')
 @import url('https://fonts.googleapis.com/css?family=Oswald:400,700&subset=latin-ext')
 
 
@@ -16,7 +16,7 @@
 // @import url('https://fonts.googleapis.com/css?family=Trirong:400,700&subset=latin-ext')
 // @import url('https://fonts.googleapis.com/css?family=Eczar:400,700&subset=latin-ext')
 
-//pretty poor (only capitals) inspired by ROMAN INSCRIPTIONS!!
+//pretty poor (only capitals) but inspired by ROMAN INSCRIPTIONS!!
 // @import url('https://fonts.googleapis.com/css?family=Cinzel:400,700')
 
 //serif latin extended norm
