--- a/assets/css/1-base/base.sass
+++ b/assets/css/1-base/base.sass
@@ -15,10 +15,10 @@ body
   // font-size: $base-font-size
   color: $primary-color
   // text-rendering: geometricPrecision
-  // text-rendering: optimizeLegibility
+  text-rendering: optimizeLegibility
   //default
   // font-kerning: auto
-  font-variant-numeric: oldstyle-nums
+  // font-variant-numeric: oldstyle-nums
   font-size: 16px
   // position: relative
 
