--- a/assets/css/3-module/c-text.sass
+++ b/assets/css/3-module/c-text.sass
@@ -18,6 +18,6 @@
 
 
 .c-subtitle
-  font-size: $font-size-large-1
+  font-size: $font-size-base
   margin-bottom: $vertical-rhytm / 2
   padding-top: $vertical-rhytm / 2
