--- a/assets/css/3-module/c-underlines.sass
+++ b/assets/css/3-module/c-underlines.sass
@@ -4,3 +4,10 @@
   background-size: 0.1em 0.1em
   background-position: 0 86%
   text-shadow: .03em 0 $color-background, -.03em 0 $color-background, 0 .03em $color-background, 0 -.03em $color-background, .06em 0 $color-background, -.06em 0 $color-background, .09em 0 $color-background, -.09em 0 $color-background, .12em 0 $color-background, -.12em 0 $color-background, .15em 0 $color-background, -.15em 0 $color-background
+
+.c-underline-2
+  background-image: linear-gradient(to bottom, transparent 50%, $jadeit 50%)
+  background-repeat: repeat-x
+  background-size: 0.2em 0.2em
+  background-position: 0 86%
+  text-shadow: .03em 0 $color-background, -.03em 0 $color-background, 0 .03em $color-background, 0 -.03em $color-background, .06em 0 $color-background, -.06em 0 $color-background, .09em 0 $color-background, -.09em 0 $color-background, .12em 0 $color-background, -.12em 0 $color-background, .15em 0 $color-background, -.15em 0 $color-background
