--- a/assets/css/1-base/vars.sass
+++ b/assets/css/1-base/vars.sass
@@ -1,11 +1,23 @@
 //colors
 $jadeit: #9c6
+$color-header: lighten(hsl(46,50,57), 5%)
+$khaki: hsl(79,50,26)
 $tyrkys: rgb(0, 255, 255)
+$blue-light: hsl(195,50,76)
+$brown-light: hsl(46,50,57)
+$brown-dark: hsl(41,50,39)
+$yellow-light: hsl(61, 100, 63)
+$yellow-dark: hsl(66,100,57)
 
-$color-text: black
-$color-background: white
+//TRANSITIONS*
+//************
+
+$transition-basic: color 0.22s ease-out
+
+$color-background: darken(white, 2.55)
 $color-selection: #b4d5fe
-$primary-color: lighten(black, 2%)
+$color-text-primary: lighten(black, 4%)
+$color-text-secondary: $color-background
 $color-text-light: lighten(black, 45%)
 
 //typography, fontsize
@@ -19,9 +31,12 @@ $font-size-large-4: 4.736rem
 $font-size-large-5: 6.313rem
 
 
-//
+
 //vertical-rhytm
-$base-line-height: 1.4
+//**************
+
+$base-line-height: 1.55
 $vertical-rhytm: $base-line-height * $font-size-base
 $vertical-rhytm: $base-line-height * $font-size-small
-$vertical-rhytm: $base-line-height * $font-size-small
+$padding-container: $vertical-rhytm
+$padding-elements: $vertical-rhytm
