--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,8 +5,8 @@
 @import "0-tools/box-sizing_clearfix";
 @import "1-base/base";
 @import "2-layout/l-layout";
-@import "3-module/c-header";
+@import "3-module/c-page";
 @import "3-module/c-text";
 @import "3-module/c-article";
-@import "3-module/c-underlines";
+@import "3-module/c-underlines"; 
 @import "4-state/state";
