--- a/assets/css/3-module/c-article.sass
+++ b/assets/css/3-module/c-article.sass
@@ -1,5 +1,13 @@
 //.varianta
 // section,
+
+
+
+
+
+
+
+
 .c-article,
 .c-article__header,
 .c-article__header--frosting-glass,
@@ -13,7 +21,7 @@
 .c-article
   margin-bottom: 50vh
 
-.c-article__header,
+.c-article__header
   //1. varianta background img v kontajneri nie je potrebny
   // .c-article__header--frosting-glass
   background-image: url('images/background/bg-standart.jpeg')
@@ -28,7 +36,7 @@
   display: flex
 
 .c-article__header--frosting-glass
-  height: 30vh
+  // height: 30vh
   width: 100%
   display: flex
   align-items: center
@@ -40,41 +48,47 @@
   // margin-top: auto
 
   //1.varianta
-  background-color: rgba(white, 0.7)
+  //background-color: rgba(white, 0.9)
   // 2.varianta
-  background-color: white
+  background-color: $color-header
   // position: relative
   z-index: 9
   &:after
+    // background-color: $jadeit
     background-image: url('images/background/bg-standart.jpeg')
     background-attachment: fixed
     background-size: cover
-    // display: block
+    // mix-blend-mode: screen
+    display: block
     // z-index: -1
-    filter: blur(3px)
+    filter: blur(5px)
     margin: -3px 0 -9px
     content: ' '
-    width: calc(100% + 10px)
-    height: calc(100% + 6px)
+    // width: 100%
+    // height: 100%
+    width: calc(100% + 9px)
+    height: calc(100% + 3px)
     // height: 100%
     position: absolute
     top: 0
     left: 0
-    opacity: 0.6
+    right: 0
+    bottom: 0
+    opacity: 0.3
   @media(max-width: 600px)
     height: 60vh
 
-.c-article__hg
-  width: 960px
-  margin: 0 auto
-  @media(max-width: 400px)
-    margin: 0 $vertical-rhytm/2
+.c-article__hgroup
+  padding-top: $vertical-rhytm
+  padding-bottom: $vertical-rhytm
+  // color: white
+
 
 .c-article__author
-  font-size: $font-size-large-2
+  font-size: $font-size-large-1
 
 .c-article__title
-  font-size: $font-size-large-4
+  font-size: $font-size-large-3
   font-weight: bold
 
 //2.varianta
