--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,4 @@
 doctype html
-
-mixin section(link, name)
-  a(href=link).c-section
-    .c-section__background
-    .c-section__name
-      h2.c-section__name--title=name
-
 html(lang="sk")
   head
     meta(charset="UTF-8")
@@ -15,24 +8,36 @@ html(lang="sk")
     title index
     link(rel="stylesheet", href="main.css")
   body
-    header.c-page__header
+    header
+      .c-page__header-background
+      .c-page__header
+        .l-container.l-flex.l-f-opposite
+          .c-page__title Terra Carphatica
+          nav.c-page__nav.l-flex.l-f-v-center
+            ul.l-flex
+              li
+               a.c-page__link(href='/') Úvod
+              li
+                a.c-page__link(href='/') Stanovy
+              li
+                a.c-page__link(href='/') Kontakt
     article.c-article
       header.c-article__header
         .c-article__header--frosting-glass
-          .c-article__hg
+          .l-container.c-article__hgroup
             h1.c-article__title Názov článku
             h2.c-article__author Maroš Ondrejka
-      .c-article__body
+      .l-container
         section.c-article__section
           p.c-text--first In sanctus qualisque delicatissimi eam, pro ei graeco scripta assentior, ut qui modo illum. Unum dolorum consulatu no vim, est aliquip phaedrum no. Aeque aperiam cu nec, quem facilisi eum et, quodsi legendos disputando et eam. Cum an fabulas adolescens, ubique delectus has an, vim et numquam ocurreret. Pri ex sonet temporibus, persius verterem phaedrum nam ea, in phaedrum dissentias honestatis vim. Saepe facilisis elaboraret id qui, ei quod ridens his. Eu eum inimicus expetenda, amet quas his et.
           p.c-text Lorem ipsum dolor sit amet, amet animal mediocritatem pro id, eum alia dicta ex, tale vocibus signiferumque id usu. In augue putent percipitur nec, pri cu dicant noluisse evertitur. Suas lucilius accusamus et usu, pri ex possit voluptaria. Vix timeam nostrud persecuti eu, mea ne malis inermis dolores. Erant accusam ne vix.
         section.l-flex-row-e
-          figure.l-g-1-2-e.c-article__figure
+          figure.l-g-1-2-e.c-article__figure-e
             img(src='images/article/art-3-normal.jpeg')
             figcaption.c-article__caption-abs An porro vocent est. Malorum phaedrum oportere ad quo.
           .l-g-2-2-e
-            p.c-text Ad mei nostro possim adipisci. <span class='c-underline-2'>Sanctus postulant euripidis ne nec</span>, vel esse maluisset at. Veniam vidisse torquatos eu vim. Doming regione abhorreant usu et, ut etiam erroribus mel. Eam ea decore facilisis qualisque, nam viris utroque invidunt eu. Nullam menandri adipisci ei est, pro at habeo dicunt appareat.
-            p.c-text Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius.Eam ei sale probo abhorreant, altera eripuit tincidunt vix an.
+            p.c-text Ad mei nostro possim adipisci. <span class='c-underline-2'>Sanctus postulant euripidis ne nec</span>, vel esse maluisset at. Veniam vidisse torquatos eu vim. Doming regione abhorreant usu et, ut etiam erroribus mel. Eam ea decore facilisis qualisque, nam viris utroque invidunt eu. Nullam menandri adipisci ei est.
+            p.c-text Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius.Eam ei sale probo abhorreant.
             p.c-text Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare, vix veniam persequeris id, ex eos novum dolore. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius.Eam ei sale probo abhorreant, altera eripuit tincidunt vix an.
 
         section.c-article__section
@@ -78,7 +83,7 @@ html(lang="sk")
 
 
 
-    #js-page-load.is-loading
+    #js-page-load.c-page-is-loading
     #js-modal.c-modal
     script(src="js/TweenMax.min.js")
     script(src="js/onload.js")
