--- a/assets/css/1-base/vars.sass
+++ b/assets/css/1-base/vars.sass
@@ -12,7 +12,7 @@ $yellow-dark: hsl(66,100,57)
 //TRANSITIONS*
 //************
 
-$transition-basic: color 0.22s ease-out
+$transition-basic: color 0.22s ease-out 0.1s
 
 $color-background: darken(white, 2.55)
 $color-selection: #b4d5fe
@@ -40,3 +40,4 @@ $vertical-rhytm: $base-line-height * $font-size-base
 $vertical-rhytm: $base-line-height * $font-size-small
 $padding-container: $vertical-rhytm
 $padding-elements: $vertical-rhytm
+$margin-element: $vertical-rhytm
