--- a/assets/css/3-module/c-profile.sass
+++ b/assets/css/3-module/c-profile.sass
@@ -11,7 +11,7 @@
   display: flex
   flex-wrap: wrap
   padding: $vertical-rhytm
-  box-shadow: 0 0 6px lighten(black, 20%)
+  box-shadow: 0 0 2px lighten(grey, 10%)
   visibility: hidden
   position: absolute
 
@@ -24,3 +24,17 @@
 
 .c-profile__figure
   margin-bottom: $vertical-rhytm / 2
+
+.l-g-col-1-2
+  width: 38.19%
+
+.l-g-col-2-2
+  width: 61.8%
+  padding-left: $vertical-rhytm
+  @media(max-width: 500px)
+    padding-left: 0
+
+.l-g-col-1-1,
+.l-g-col-2-2
+  @media(max-width: 500px)
+    width: 100%
