--- a/assets/css/3-module/c-text.sass
+++ b/assets/css/3-module/c-text.sass
@@ -2,7 +2,7 @@
 .c-text--continue,
 .c-text--first
   font-size: $font-size-small
-  margin-bottom: $vertical-rhytm / 2
+  margin-bottom: $vertical-rhytm
   // page-break-inside: avoid
   // break-inside: avoid
 
