--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,5 +8,7 @@
 @import "3-module/c-page";
 @import "3-module/c-text";
 @import "3-module/c-article";
-@import "3-module/c-underlines"; 
+@import "3-module/c-underlines";
+@import "3-module/c-modal";
+@import "3-module/c-profile"; 
 @import "4-state/state";
