--- a/assets/css/1-base/base.sass
+++ b/assets/css/1-base/base.sass
@@ -47,6 +47,7 @@ h1, h2, h3, h4, h5, h6, p, a, span
     background: $color-header
 
 img
+  // max-width: 100%
   width: 100%
   object-fit: contain
   display: block
