--- a/views/index.pug
+++ b/views/index.pug
@@ -26,59 +26,54 @@ html(lang="sk")
         .c-article__header--frosting-glass
           .l-container.c-article__hgroup
             h1.c-article__title Názov článku
-            h2.c-article__author Maroš Ondrejka
+            h2.js-modal.c-article__author(data-prot='profiles.maros-ondrejka') Maroš Ondrejka
       .l-container
-        section.c-article__section
+        section.l-g-2-2.c-article__body
           p.c-text--first In sanctus qualisque delicatissimi eam, pro ei graeco scripta assentior, ut qui modo illum. Unum dolorum consulatu no vim, est aliquip phaedrum no. Aeque aperiam cu nec, quem facilisi eum et, quodsi legendos disputando et eam. Cum an fabulas adolescens, ubique delectus has an, vim et numquam ocurreret. Pri ex sonet temporibus, persius verterem phaedrum nam ea, in phaedrum dissentias honestatis vim. Saepe facilisis elaboraret id qui, ei quod ridens his. Eu eum inimicus expetenda, amet quas his et.
           p.c-text Lorem ipsum dolor sit amet, amet animal mediocritatem pro id, eum alia dicta ex, tale vocibus signiferumque id usu. In augue putent percipitur nec, pri cu dicant noluisse evertitur. Suas lucilius accusamus et usu, pri ex possit voluptaria. Vix timeam nostrud persecuti eu, mea ne malis inermis dolores. Erant accusam ne vix.
-        section.l-flex-row-e
-          figure.l-g-1-2-e.c-article__figure-e
+          figure.c-article__figure-float
             img(src='images/article/art-3-normal.jpeg')
-            figcaption.c-article__caption-abs An porro vocent est. Malorum phaedrum oportere ad quo.
-          .l-g-2-2-e
-            p.c-text Ad mei nostro possim adipisci. <span class='c-underline-2'>Sanctus postulant euripidis ne nec</span>, vel esse maluisset at. Veniam vidisse torquatos eu vim. Doming regione abhorreant usu et, ut etiam erroribus mel. Eam ea decore facilisis qualisque, nam viris utroque invidunt eu. Nullam menandri adipisci ei est.
-            p.c-text Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius.Eam ei sale probo abhorreant.
-            p.c-text Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare, vix veniam persequeris id, ex eos novum dolore. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius.Eam ei sale probo abhorreant, altera eripuit tincidunt vix an.
-
-        section.c-article__section
+            figcaption.c-article__caption An porro vocent est. Malorum phaedrum oportere ad quo.
+          p.c-text Ad mei nostro possim adipisci. <span class='c-underline-2'>Sanctus postulant euripidis ne nec</span>, vel esse maluisset at. Veniam vidisse torquatos eu vim. Doming regione abhorreant usu et, ut etiam erroribus mel. Eam ea decore facilisis qualisque, nam viris utroque invidunt eu. Nullam menandri adipisci ei est. Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius.Eam ei sale probo abhorreant.
+          p.c-text Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare, vix veniam persequeris id, ex eos novum dolore. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius.Eam ei sale probo abhorreant, altera eripuit tincidunt vix an.
           p.c-text Velit aliquip suscipiantur in quo. An porro vocent est. Malorum phaedrum oportere ad quo, nulla scaevola qui eu. Viris accusam nam in, no mea prima scaevola rationibus. Pro nibh fugit et, eu solum nulla mazim nam. Duo libris habemus an.
           p.c-text Mazim dicit diceret mea eu, vis nostrum mandamus postulant eu. Cu ius ferri insolens signiferumque, eum an ludus dicunt. Ad sit harum euismod, legere luptatum nominati in has, zril quando corrumpit eu pro. Id est vide feugait patrioque, at est sonet facete interesset.
           p.c-text Atomorum intellegat interesset an sed, his cu deleniti evertitur neglegentur. Ea pro viris qualisque. Minim tincidunt definiebas ex eos, vim cu iriure interpretaris, ea prompta cotidieque eam. Feugait minimum detracto ea eum, civibus evertitur est no. Nam modo consulatu scriptorem cu, pri at audire eloquentiam. Et per scaevola officiis intellegat, scripta persius in his, at munere soleat aperiri his.
           p.c-text Doctus salutandi voluptatum ius id, in has inermis eleifend. Id inciderint sadipscing referrentur ius, ei appetere quaestio sea. Et mea probo efficiendi, no hinc legere quaerendum eum. Populo docendi no eos.
-        section.l-flex-row.c-article__section--multimedia
-          figure.l-1-1.c-article__figure
+
+          figure.c-article__figure-full
             img(src='images/article/art-5-normal.jpeg')
             figcaption.c-article__caption Eius epicuri appellantur sit ex, mea et debitis expetendis consetetur
-        section.c-article__section
           p.c-text Cu mel soluta ancillae. Te mel voluptatum complectitur, feugait reprimique temporibus et duo. Nonumy albucius disputando ut eum. Eum dicta nullam bonorum ex, ea eam paulo deserunt. Verear alterum quo ex, quo at vitae qualisque.
           p.c-text Legimus definitionem eu mea. Dicam admodum fastidii id mea. Duo no laoreet sadipscing, ne pri hinc iudicabit voluptatibus. Modus invidunt eu vel. Tempor aeterno fierent ne vis, debitis ceteros eligendi eu eos. Alienum perpetua eum cu, postulant hendrerit ex qui.
           p.c-text Eius epicuri appellantur sit ex, mea et debitis expetendis consetetur, corpora consectetuer sed ad. Duo fuisset antiopam erroribus in, illum aliquam accusam duo ut. Ex eirmod debitis sapientem eos. Ne summo dicam perpetua vix.
-        section.l-flex-row.c-article__section--multimedia
-          figure.l-g-1-2.c-article__figure
+          p.c-text Mazim dicit diceret mea eu, vis nostrum mandamus postulant eu. Cu ius ferri insolens signiferumque, eum an ludus dicunt. Ad sit harum euismod, legere luptatum nominati in has, zril quando corrumpit eu pro. Id est vide feugait patrioque, at est sonet facete interesset.
+          figure.c-article__figure-float
             img(src='images/article/art-4-normal.jpeg')
-            figcaption.c-article__caption Doctus salutandi voluptatum ius id, in has inermis eleifend
-          .l-g-2-2.l-l-padding
-            p.c-text Pro tation consul id, sed an autem habemus honestatis. Eum ei blandit gloriatur, vis conceptam cotidieque an. Eum quas ornatus definitionem ut, mea te harum putent. Fugit sapientem pro at. Te qui ignota copiosae torquatos. Errem integre te vim, cu usu graece accusamus gubergren. Iisque deterruisset ius at, ut quodsi tractatos.
-            p.c-text Legimus definitionem eu mea. Dicam admodum fastidii id mea. Duo no laoreet sadipscing, ne pri hinc iudicabit voluptatibus. Modus invidunt eu vel. Tempor aeterno fierent ne vis, debitis ceteros eligendi eu eos.
-        section.c-article__section
+            figcaption.c-article__caption Doctus salutandi voluptatum ius id, in has inermis eleifend.
+          p.c-text Pro tation consul id, sed an autem habemus honestatis. Eum ei blandit gloriatur, vis conceptam cotidieque an. Eum quas ornatus definitionem ut, mea te harum putent. Fugit sapientem pro at. Te qui ignota copiosae torquatos. Errem integre te vim, cu usu graece accusamus gubergren. Iisque deterruisset ius at, ut quodsi tractatos.
+          p.c-text Legimus definitionem eu mea. Dicam admodum fastidii id mea. Duo no laoreet sadipscing, ne pri hinc iudicabit voluptatibus. Modus invidunt eu vel. Tempor aeterno fierent ne vis, debitis ceteros eligendi eu eos.
           p.c-text Simul soluta percipit pro ad, id vim summo sensibus. Eam ei utinam meliore, mazim vocibus menandri te est, eu nulla tamquam expetendis vim. Mea malis oblique at. Illum regione assentior et usu, gloriatur consequuntur ut mel. No omittam qualisque vel, vel hendrerit posidonium ad. An euismod persecuti sit, ne civibus reprimique mel.
           h3.c-subtitle Eam at fastidii verterem, virtute urbanitas.
           p.c-text Doctus salutandi voluptatum ius id, in has inermis eleifend. Id inciderint sadipscing referrentur ius, ei appetere quaestio sea. Et mea probo efficiendi, no hinc legere quaerendum eum. Populo docendi no eos.
           p.c-text Perfecto pertinax recteque pri ea, est et prima accusam. Sit ad consulatu neglegentur, in eirmod dignissim temporibus ius. Ius eu viderer philosophia, ullum verterem prodesset mei at. Cu veniam deseruisse nam. Ne mei hinc neglegentur, ad eros conceptam percipitur pro, vim discere dissentiet te. An has accumsan disputationi.
-        section.l-flex-row.c-article__section--multimedia
-          figure.l-g-1-2.c-article__figure
+          figure.c-article__figure-float
             img(src='images/article/art-8-normal.jpeg')
             figcaption.c-article__caption Eum ei blandit gloriatur est et prima accusam.
-          .l-g-2-2.l-l-padding
-            p.c-text Te iuvaret accommodare delicatissimi mea. Est sanctus inermis incorrupte id, dicam urbanitas efficiendi no eos. Mel ut viris albucius. Nec blandit invidunt dissentiunt et. Erant quando perfecto id eum, mel cu dicat tacimates expetendis. Duo indoctum molestiae at, no per ancillae definitiones, melius consequuntur ut ius.
-            p.c-text Pro tation consul id, sed an autem habemus honestatis. Eum ei blandit gloriatur, vis conceptam cotidieque an. Eum quas ornatus definitionem ut, mea te harum putent. Fugit sapientem pro at. Te qui ignota copiosae torquatos. Errem integre te vim, cu usu graece accusamus gubergren. Iisque deterruisset ius at, ut quodsi tractatos iudicabit pri, has ut prompta scaevola accommodare.
-            p.c-text Eam delenit ancillae tincidunt no, facilisi percipitur ut pro, et simul docendi usu. Sed no habeo possim moderatius, eum et exerci laudem graecis, quo in alia magna veniam. No nec quod quaestio, ludus vivendo eam at. Vim movet rationibus id, ea solum imperdiet moderatius vix, legere similique ne pro. Quo odio lorem ex, eu duo mazim diceret, eum insolens reprimique at.
-            p.c-text Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare, vix veniam persequeris id, ex eos novum dolore. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius. Fugit sapientem pro at.
-        section.c-article__section
+          p.c-text Te iuvaret accommodare delicatissimi mea. Est sanctus inermis incorrupte id, dicam urbanitas efficiendi no eos. Mel ut viris albucius. Nec blandit invidunt dissentiunt et. Erant quando perfecto id eum, mel cu dicat tacimates expetendis. Duo indoctum molestiae at, no per ancillae definitiones, melius consequuntur ut ius.
+          p.c-text Pro tation consul id, sed an autem habemus honestatis. Eum ei blandit gloriatur, vis conceptam cotidieque an. Eum quas ornatus definitionem ut, mea te harum putent. Fugit sapientem pro at. Te qui ignota copiosae torquatos. Errem integre te vim, cu usu graece accusamus gubergren. Iisque deterruisset ius at, ut quodsi tractatos iudicabit pri, has ut prompta scaevola accommodare.
+          p.c-text Eam delenit ancillae tincidunt no, facilisi percipitur ut pro, et simul docendi usu. Sed no habeo possim moderatius, eum et exerci laudem graecis, quo in alia magna veniam. No nec quod quaestio, ludus vivendo eam at. Vim movet rationibus id, ea solum imperdiet moderatius vix, legere similique ne pro. Quo odio lorem ex, eu duo mazim diceret, eum insolens reprimique at.
+          p.c-text Vim movet rationibus id, ea solum imperdiet moderatius vix, legere similique ne pro. Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare, vix veniam persequeris id, ex eos novum dolore. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius. Cum an fabulas adolescens, fugit sapientem pro at.
           p.c-text In sanctus qualisque delicatissimi eam, pro ei graeco scripta assentior, ut qui modo illum. Unum dolorum consulatu no vim, est aliquip phaedrum no. Aeque aperiam cu nec, quem facilisi eum et, quodsi legendos disputando et eam. Cum an fabulas adolescens, ubique delectus has an, vim et numquam ocurreret. Pri ex sonet temporibus, persius verterem phaedrum nam ea, in phaedrum dissentias honestatis vim. Saepe facilisis elaboraret id qui, ei quod ridens his. Eu eum inimicus expetenda, amet quas his et.
           p.c-text Lorem ipsum dolor sit amet, amet animal mediocritatem pro id, eum alia dicta ex, tale vocibus signiferumque id usu. In augue putent percipitur nec, pri cu dicant noluisse evertitur. Suas lucilius accusamus et usu, pri ex possit voluptaria. Vix timeam nostrud persecuti eu, mea ne malis inermis dolores. Erant accusam ne vix.
-        section.article__similar
-          h2 Podobne clanky
+          figure.c-article__figure-oversize
+            //- figcaption.c-article__figcaption
+          p.c-text Eam delenit ancillae tincidunt no, facilisi percipitur ut pro, et simul docendi usu. Sed no habeo possim moderatius, eum et exerci laudem graecis, quo in alia magna veniam. No nec quod quaestio, ludus vivendo eam at. Vim movet rationibus id, ea solum imperdiet moderatius vix, legere similique ne pro. Quo odio lorem ex, eu duo mazim diceret, eum insolens reprimique at.
+          p.c-text Animal percipit et vim, fierent inimicus an usu. Ea sed civibus repudiare, vix veniam persequeris id, ex eos novum dolore. Verterem abhorreant voluptatibus nam et, iriure eleifend consetetur ad vel. Ne mei congue moderatius. Fugit sapientem pro at.
+          p.c-text In sanctus qualisque delicatissimi eam, pro ei graeco scripta assentior, ut qui modo illum. Unum dolorum consulatu no vim, est aliquip phaedrum no. Aeque aperiam cu nec, quem facilisi eum et, quodsi legendos disputando et eam. Cum an fabulas adolescens, ubique delectus has an, vim et numquam ocurreret. Pri ex sonet temporibus, persius verterem phaedrum nam ea, in phaedrum dissentias honestatis vim. Saepe facilisis elaboraret id qui, ei quod ridens his. Eu eum inimicus expetenda, amet quas his et.
+          p.c-text Lorem ipsum dolor sit amet, amet animal mediocritatem pro id, eum alia dicta ex, tale vocibus signiferumque id usu. In augue putent percipitur nec, pri cu dicant noluisse evertitur. Suas lucilius accusamus et usu, pri ex possit voluptaria. Vix timeam nostrud persecuti eu, mea ne malis inermis dolores. Erant accusam ne vix.
+          section.article__similar
+            h2 Podobne clanky
     footer.c-page__footer
 
 
@@ -89,3 +84,11 @@ html(lang="sk")
     script(src="js/onload.js")
     script(src="js/util.js")
     script(src="js/app.js")
+    script(src="js/data.js")
+    script(src="js/tmps.js")
+    script(src="js/util.js")
+    script(src="js/anim.js")
+    //- script(src="js/gallery.js")
+    //- script(src="js/menu.js")
+    script(src="js/profiles.js")
+    script(src="js/navigation.js")
